🚟🏛 Checkpoint ./package.json:31494333/1246 ./server.js:31494333/462

--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -4,6 +4,7 @@ dependencies:
   fastify-formbody: 5.0.0
   fastify-static: 4.0.1
   handlebars: 4.7.7
+  node-fetch: 2.6.1
   point-of-view: 4.14.0
 packages:
   /@discordjs/collection/0.1.6:
@@ -700,4 +701,5 @@ specifiers:
   fastify-formbody: ^5.0.0
   fastify-static: ^4.0.0
   handlebars: ^4.7.7
+  node-fetch: ^2.6.1
   point-of-view: ^4.14.0
