--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fastify-static": "^4.0.0",
     "handlebars": "^4.7.7",
     "point-of-view": "^4.14.0",
-    "discord.js": "^12.5.2"
+    "discord.js": "^12.5.2",
+    "node-fetch": "^2.6.1"
   },
   "engines": {
     "node": "12.x"
